examples/modules/expected/0849-modules-qualified-missing-fn-no-bare-fallback.stderr
error: namespace 'empty' has no member 'abs'
  --> examples/modules/0849-modules-qualified-missing-fn-no-bare-fallback.sx:8:5
   |
 8 |     empty.abs(7)
   |     ^^^^^^^^^
